<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="infotech.atom.com.creativejewel.login_screen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/normal_actionbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/logo1"
                    android:background="@drawable/logo1"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"></RelativeLayout>

                <RelativeLayout
                    android:id="@+id/logo2"
                    android:layout_below="@+id/logo1"
                    android:background="@drawable/logo2"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"></RelativeLayout>

                <ScrollView
                    android:layout_below="@+id/logo1"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_height="240dp">

                    <RelativeLayout
                        android:id="@+id/linear_layout"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/round_corner_linear"
                        >

                        <EditText
                            android:id="@+id/edit_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/edittext_border"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textSize="14sp"
                            android:hint="@string/hint_edit1"
                            android:padding="5dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            />

                        <EditText
                            android:id="@+id/edit_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/edittext_border"
                            android:layout_marginRight="5dp"
                            android:textSize="14sp"
                            android:layout_below="@+id/edit_username"
                            android:hint="@string/hint_edit2"
                            android:inputType="textPassword"
                            android:padding="5dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            />

                        <CheckBox
                            android:id="@+id/cbShowPwd"
                            android:layout_width="wrap_content"
                            android:textColor="@android:color/white"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textSize="14sp"
                            android:layout_below="@+id/edit_password"
                            android:text="@string/showpassword" />

                        <TextView
                            android:id="@+id/forgot_pass"
                            android:text="Forgot Password?"
                            android:layout_toRightOf="@+id/cbShowPwd"
                            android:layout_marginLeft="18dp"
                            android:layout_marginTop="18dp"
                            android:textSize="14sp"
                            android:textColor="@android:color/white"
                            android:layout_below="@+id/edit_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/txt_forgot_pass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:visibility="gone"
                            android:layout_alignParentRight="true"
                            android:layout_below="@+id/edit_password"
                            android:layout_marginTop="18dp"
                            android:layout_marginRight="10dp"
                            android:textColor="@android:color/white"
                            android:text="@string/forgot_password"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/register_now"
                            android:text="Need to Register?"
                            android:layout_toRightOf="@+id/cbShowPwd"
                            android:textSize="14sp"
                            android:layout_marginLeft="18dp"
                            android:layout_marginBottom="18dp"
                            android:layout_marginTop="15dp"
                            android:textColor="@android:color/white"
                            android:layout_below="@+id/forgot_pass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_below="@+id/cbShowPwd"
                            android:layout_centerHorizontal="true"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/connect"
                            android:hint="@string/sign_in"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="14sp"
                            />
                    </RelativeLayout>

                </ScrollView>



            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
